--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>me.andrew</groupId>
     <artifactId>EchoesOfGold</artifactId>
-    <version>1.0</version>
+    <version>1.2.2</version>
     <packaging>jar</packaging>
 
-    <name>halloweenevent</name>
+    <name>EchoesOfGold</name>
 
     <properties>
         <java.version>25</java.version>
