Added some more checks, added an item in the ManageGUI for setting the coins, and more.

--- a/src/main/resources/treasures.yml
+++ b/src/main/resources/treasures.yml
@@ -13,6 +13,7 @@
 #           sharpness: 5
 #           ...
 #       ...
+#     coins: (It uses this if the economy is toggled and if there are the necessary plugins installed)
 #     facing: <EAST/SOUTH/NORTH/WEST/NORTH-WEST...>
 #     world: <world/world_nether/world_the_end> !!You need to look in your server's folder for the world's name
 #     x: ...
