--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -24,9 +24,14 @@ start-book:
     - "&5Welcome, adventurer!\n\n&6The night of terror begins...\n3 cursed chests await for you in the Overworld.\n\n&cFind them before they find you."
     - "&7Each chest holds &eancient treasures&7.\nBut beware...\nSome are guarded by monsters.\n\n&4Good luck!"
 
-#Configure the Economy part of the plugin. For this you will need 'Vault' plugin and an Economy Plugin
+#Configure the Economy part of the plugin. For this you will need 'Vault' plugin and another Economy Plugin
 #This enables the store and the money players get when finding a treasure.
-toggle-using-economy: true
+economy:
+  toggle-using-economy: true
+
+  #This pops a little message above the XP bar to the player when they find a treasure.
+  #Use '%coins_amount%' to display how many coins the player got.
+  action-bar-message: "&6You got %coins_amount% coins!"
 
 #Configure general messages. Use "&" for style
 treasure-already-found: "&cYou have &lalready found &cthis treasure!" #Use & for style
@@ -230,6 +235,7 @@ stop-boss-bar-interval: 10 #Stop the boss bar after <interval> seconds when even
 #%topN_count% -> The top N player's treasures found (N = {1,2,3})
 #%player_treasures% -> Displays the player's number of found treasures
 #%max_treasures% -> Displays the max treasures of the event (configured in treasures.yml)
+#%coins_found% -> Displays the coins the player found
 scoreboard: true #true(yes)/false(no)
 scoreboard-interval: 1 #Updates the scoreboard in this interval of time (seconds)
 scoreboard-title: "&f💎 &6&lTREASURE HUNT &f💎"
@@ -241,8 +247,8 @@ scoreboard-lines:
   - "&e&l2. &e%top2_name% &7- &f%top2_count%"
   - "&c&l3. &c%top3_name% &7- &f%top3_count%"
   - "&7---------------"
-  - "&f&l[&a💰&f&l] &aYour treasures found: &f%player_treasures%/%max_treasures%"
-#P.S: I got the ASCII emojis from ChatGPT
+  - "&f&l[&a🎁&f&l] &aTreasures Found: &f%player_treasures%/%max_treasures%"
+  - "&f&l[&a🪙&f&l] &aCoins Gathered: &f&l%coins_found%" #This line will only appear if the Economy is toggled and working!
 
 #Configure the help command message
 #Use '&' for color codes
