--- a/src/main/resources/treasures.yml
+++ b/src/main/resources/treasures.yml
@@ -25,7 +25,7 @@
 #     y: ...
 #     z: ...
 
-max-treasures: 1 #Max treasures that you want in your game
+nr-of-treasures: 5 #The number of treasures you want in your game
 
 #Here, the treasures will have the same structure that is displayed at the top of this file.
 treasures:
